# challenger

./: .gitignore  .gitmodules  Problem_2_Connecting_Two_Barns.cpp  Problem_2_Diamond_Collector.cpp  Problem_2_Rental_Service.cpp  Problem_3_Cereal_2.cpp  Problem_3_Painting_the_Barn.cpp  README.md  all.code-workspace  lab_dnx04.ovpn  main  p13.ipynb  p24.ipynb  p440.ipynb  p53.ipynb  p606.ipynb  p641.ipynb  p642.ipynb  p87.ipynb  p99.ipynb  pyproject.toml  segtree.hpp
archives/codeforces/1690/: E_Price_Maximization.cpp
archives/ctf/: otw_natas.md
archives/dreamhack/pwn/: ssp_001.py
archives/e/: p188.cpp
archives/e/stash/: p152.ipynb  p86.ipynb
archives/euler/: p60.ipynb
archives/euler/10%/: p357.ipynb  p54.ipynb  p76.ipynb
archives/euler/15%/: p205.ipynb  (+5 more)
cp/: main  main.cpp  mise.toml
cp/playground/: brute  brute.cpp  check  checker.cpp  gen  gen.cpp  sol
ctf/: mise.toml  pyproject.toml  script.sh
ctf/tools/ad/: bloodhound.config.json  targetedKerberoast.py
ctf/tools/bloodhound/: .env  SharpHound.ps1  bhce_docker-compose.yml
ctf/tools/scripts/: username-anarchy
lib/: jngen.hpp  prettyprint.hpp  testlib.h
stash/: p122.ipynb  p146.ipynb  p206.ipynb  p28.ipynb  p297.ipynb  p303.ipynb  p511.ipynb  p59.ipynb  p641.ipynb  p686.ipynb  p73.ipynb  p795.ipynb
templates/: normal.cpp
tools/: requirements.txt  template.cpp
tools/ad/: bhce_docker-compose.yml
tools/lib/: template.cpp
tools/scripts/: crypto.py  format-plugins.rb  jwt_tool.py  pwninit.py
tools/vpn/: lab_dnx04.ovpn  starting_point_dnx04.ovpn
writeups/euler/: p145.ipynb  p417.ipynb
(+144 files in other folders)
