[project]
name = "ctf"
version = "0.1.0"
description = "CTF scripts"
requires-python = ">=3.13"
dependencies = [
    "bashfuscator",
    "cupp>=1.3.3",
    "hashid>=3.1.4",
    "impacket>=0.12.0",
    "pycryptodomex>=3.21.0",
    "xsstrike>=3.2.2",
]

[tool.uv.sources]
bashfuscator = { git = "https://github.com/Bashfuscator/Bashfuscator.git" }
